<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <com.pz.xingfutao.widget.FitWidthImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/background_tab_profile" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/background"
            android:orientation="horizontal" >
            
            <LinearLayout
                android:id="@+id/my_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/selector_profile_transparent_dark">
                
                <ImageView 
                    android:layout_width="match_parent"
                    android:layout_height="20dip"
                    android:layout_marginTop="10dip"
                    android:src="@drawable/pc_my_order"/>
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:text="@string/fragment_tab_profile_my_order_button"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textColor="#FFFFFF" />
                
            </LinearLayout>
            
            <ImageView
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:paddingTop="10dip"
                android:paddingBottom="10dip"
                android:src="#FFFFFF"
                android:background="@drawable/selector_profile_transparent_dark" />
            
            <LinearLayout
                android:id="@+id/my_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@drawable/selector_profile_transparent_dark">
                
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dip"
                    android:layout_marginTop="10dip"
                    android:src="@drawable/pc_my_fav" />
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:text="@string/fragment_tab_profile_my_favorite_button"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:textColor="#FFFFFF" />
                
            </LinearLayout>
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_layout"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/fragment_tab_profile_quote_welcome"
                android:textColor="#666666" />
            
            <TextView
                android:id="@+id/click_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/fragment_tab_profile_click_to_login"
                android:textColor="#666666" />
            
        </LinearLayout>
        
    </RelativeLayout>

</LinearLayout>
</ScrollView>
